Fixed database docker hostname

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+# Name of the db docker container
+DB_HOST=database
+# DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=laravel
 DB_USERNAME=postgres
