--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
 
   db:
     container_name: database
-    image: postgres:15.1-alpine3.17
+    image: postgres:17.4-alpine3.21
     restart: unless-stopped
     tty: true
     environment:
@@ -59,3 +59,4 @@ services:
       - '${DB_PORT:-5432}:5432'
     volumes:
       - db:/var/lib/postgresql/data
+    command: -c shared_buffers=512MB
